--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8090
+server.port=8082
 
 
 spring.datasource.url=jdbc:mysql://localhost:8889/AmirUdemyNew
@@ -8,3 +8,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 
+server.error.include-message=always
+server.error.include-binding-errors=always
