--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
+			<artifactId>p</artifactId>
 			<version>2.7.3</version>
 		</dependency>
 
