--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=8082
+server.port=8085
 
 
 spring.datasource.url=jdbc:mysql://localhost:8889/AmirUdemyNew
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
 server.error.include-message=always
